--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -22,4 +22,5 @@ jobs:
       - name: Release
         uses: softprops/action-gh-release@v1
         with:
+          if: startsWith(github.ref, 'refs/tags/')
           files: Release.txt
