--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -4,8 +4,8 @@ name: CI
 
 # Controls when the workflow will run
 on:
-#  release:
-#    types: [created]
+  release:
+    types: [created]
   workflow_dispatch: # allow manual trigger
 
 
